# spwd

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  USAGE.md
.github/workflows/: binaries.yml  docker.yml  release.yml  testing.yaml
src/: main.rs  utils.rs
src/cli/: mod.rs  uuid.rs  validation.rs
src/generators/: mod.rs  objectid.rs  ulid.rs  uuid.rs
tests/: main.rs  objectid.rs  ulid.rs  uuid.rs
